--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -38,7 +38,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">11월</a>
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">복습복습</a>
                 </li>
             </ul>
             <form class="d-flex">
