--- a/src/main/resources/templates/articles/index.mustache
+++ b/src/main/resources/templates/articles/index.mustache
@@ -1,4 +1,5 @@
 {{>layouts/header}}
+<!--  글 목록 페이지  -->
 <table class="table">
     <thead>
     <tr>
@@ -11,10 +12,11 @@
     {{#articleList}}
     <tr>
         <th>{{id}}</th>
-        <td>{{title}}</td>
+        <td><a href="/articles/{{id}}">{{title}}</a></td>
         <td>{{content}}</td>
     </tr>
     {{/articleList}}
     </tbody>
 </table>
+<a href="/articles/new" class="btn btn-primary">글 쓰기</a>
 {{>layouts/footer}}
