--- a/src/main/resources/templates/articles/new.mustache
+++ b/src/main/resources/templates/articles/new.mustache
@@ -1,5 +1,5 @@
 {{>layouts/header}}
-
+<!--  글 작성 페이지  -->
 <form class="container" action="/articles/create" method="post">
     <div class="mb-3">
         <label class="form-label">제목</label>
@@ -9,8 +9,9 @@
         <label class="form-label">내용</label>
         <textarea class="form-control" rows="3" name="content"></textarea>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+    <button type="submit" class="btn btn-primary">등록</button>
 
+    <a href="/articles" class="btn btn-warning">뒤로가기</a>
+</form>
 
 {{>layouts/footer}}
