--- a/src/main/resources/templates/articles/show.mustache
+++ b/src/main/resources/templates/articles/show.mustache
@@ -1,4 +1,5 @@
 {{>layouts/header}}
+<!--  글 상세 페이지  -->
 <table class="table">
     <thead>
     <tr>
@@ -17,5 +18,8 @@
     {{/article}}
     </tbody>
 </table>
+
+<a href="/articles" class="btn btn-primary">목록</a>
+<a href="/articles/{{article.id}}/edit" class="btn btn-success">수정</a>
 
 {{>layouts/footer}}
