--- a/src/main/resources/templates/articles/show.mustache
+++ b/src/main/resources/templates/articles/show.mustache
@@ -21,5 +21,6 @@
 
 <a href="/articles" class="btn btn-primary">목록</a>
 <a href="/articles/{{article.id}}/edit" class="btn btn-success">수정</a>
+<a href="/articles/{{article.id}}/delete" class="btn btn-danger">삭제</a>
 
 {{>layouts/footer}}
