--- a/src/main/resources/templates/articles/edit.mustache
+++ b/src/main/resources/templates/articles/edit.mustache
@@ -1,16 +1,16 @@
 {{>layouts/header}}
 <!--  글 수정 페이지  -->
 {{#article}}
-<form class="container" action="/articles/update" method="post">
-    <input name="id" type="hidden", value="{{id}}">
-    <div class="mb-3">
-        <label class="form-label">제목</label>
-        <input type="text" class="form-control" name="title" value="{{title}}">
-    </div>
-    <div class="mb-3">
-        <label class="form-label">내용</label>
-        <textarea class="form-control" rows="3" name="content">{{content}}</textarea>
-    </div>
+    <form class="container" action="/articles/update" method="post">
+        <input name="id" type="hidden" value="{{id}}">
+        <div class="mb-3">
+            <label class="form-label">제목</label>
+            <input type="text" class="form-control" name="title" value="{{title}}">
+        </div>
+        <div class="mb-3">
+            <label class="form-label">내용</label>
+            <textarea class="form-control" rows="3" name="content">{{content}}</textarea>
+        </div>
     <button type="submit" class="btn btn-primary">등록</button>
 
     <a href="/articles/{{id}}" class="btn btn-warning">뒤로가기</a>
