--- a/src/main/resources/templates/articles/show.mustache
+++ b/src/main/resources/templates/articles/show.mustache
@@ -24,4 +24,8 @@
 <a href="/articles/{{article.id}}/edit" class="btn btn-success">수정</a>
 <a href="/articles/{{article.id}}/delete" class="btn btn-danger">삭제</a>
 
+<!--  상세 페이지에 댓글 뷰 파일 삽입.  -->
+{{>comments/_comments}}
+
+
 {{>layouts/footer}}
