--- a/src/main/resources/templates/comments/_new.mustache
+++ b/src/main/resources/templates/comments/_new.mustache
@@ -28,24 +28,30 @@
         // 댓글 생성 버튼 변수화.
         const commentCreateBtn = document.querySelector("#comment-create-btn");
         commentCreateBtn.addEventListener("click", function () {
-
+            // 새 댓글 객체 생성.
             const comment = {
+                // 새 댓글 닉네임.
                 nickname: document.querySelector("#new-comment-nickname").value
+                // 새 댓글 본문
                 , body: document.querySelector("#new-comment-body").value
+                // 부모 게시글 id
                 , articleId: document.querySelector("#new-comment-article-id").value
             };
             console.log(comment);
 
             const url = "/api/articles/" + comment.articleId + "/comments";
+            // 비동기 통신을 위한 API -  fetch()
             fetch(url, {
                   method: "POST"
-                , headers: {
+                , headers: {    // 전송 본문의 데이터 타입(JSON) 정보
                     "Content-Type": "application/json"
                 },
-                  body: JSON.stringify(comment)
+                  body: JSON.stringify(comment)     // comment 객체를 JSON 문자열로 변환해서 전송.
             }).then(response => {
+                // HTTP 응답 코드에 따른 메시지 출력.
                 const msg = response.ok ? "댓글이 등록됐음." :"댓글 등록 실패!";
                 alert(msg);
+                // 페이지 새로 고침.
                 window.location.reload();
             });
         });
