--- a/src/main/resources/templates/comments/_list.mustache
+++ b/src/main/resources/templates/comments/_list.mustache
@@ -11,7 +11,13 @@
                         data-bs-id="{{id}}"
                         data-bs-nickname="{{nickname}}"
                         data-bs-body="{{body}}"
-                        data-bs-article-id="{{articleId}}">수정</button>
+                        data-bs-article-id="{{articleId}}">수정
+                </button>
+                <!--  댓글 삭제 버튼  -->
+                <button type="button"
+                        class="btn btn-sm btn-outline-danger comment-delete-btn"
+                        data-comment-id="{{id}}">삭제
+                </button>
             </div>
             <div class="card-body">
                 {{body}}
@@ -104,6 +110,38 @@
                 // 현재 페이지 새로고침.
                 window.location.reload();
             });
+        });
+    }
+</script>
+
+<!--  댓글 삭제  -->
+<script>
+    {
+        // 삭제 버튼 선택.
+        const commentDeleteBtns = document.querySelectorAll(".comment-delete-btn");
+        commentDeleteBtns.forEach(btn => {              // 삭제 버튼 수만큼 반복.
+            btn.addEventListener("click", (event) => {                              // event 객체 받아오기.
+                const commentDeleteBtn = event.target;                              // 삭제 버튼 변수화.
+                // 삭제 댓글 id 가져오기.
+                const commentId = commentDeleteBtn.getAttribute("data-comment-id"); // id 가져오기
+                console.log(`삭제 버튼 클릭 : ${commentId}번 댓글`);
+
+                // 삭제 REST API 호출.
+                const url = `/api/comments/${commentId}`;
+                fetch(url, {
+                    method: "DELETE"
+                }).then(response => {
+                    // 댓글 삭제 실패.
+                    if (!response.ok) {
+                        alert("댓글 삭제 실패!");
+                        return;
+                    }
+                    // 댓글 삭제 성공
+                    const msg = `${commentId}번 댓글을 삭제했음.`;
+                    alert(msg);
+                    window.location.reload();
+                })
+            })
         });
     }
 </script>
